--- a/frame2/src/main/res/layout/activity_main.xml
+++ b/frame2/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
 
 
     <com.yyx.framing.frame4.SwitchButton
+        android:id="@+id/switchButton1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
