--- a/framing/src/main/res/values/attrs.xml
+++ b/framing/src/main/res/values/attrs.xml
@@ -44,4 +44,12 @@
             <enum name="right" value="3"/>
         </attr>
     </declare-styleable>
+
+
+
+    <declare-styleable name="day">
+        <attr name="state_current" format="boolean" />
+    </declare-styleable>
+
+    <attr name="calendarViewStyle" format="reference" />
 </resources>
