--- a/framing/src/main/res/values/styles.xml
+++ b/framing/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
         <attr name="cpb_paddingProgress" format="dimension"/>
     </declare-styleable>
 
+
+    <style name="CalendarTheme">
+        <item name="calendarViewStyle">@style/CalendarStyle</item>
+    </style>
+
+    <style name="CalendarStyle">
+        <item name="android:orientation">vertical</item>
+    </style>
 </resources>
